[package]
name = "owlz"
version = "0.1.0"
edition = "2021"
authors = ["DragonFighter603 <kuhn.christopher.a@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["owls", "emoji"]
repository = "https://github.com/DragonFIghter603/owlz-rs"
description = """
"Owlz" ascii emoojis, created deliberately or randomly.
"""

[dependencies]
rand = "0.8.5"
rand_derive2 = "0.1.17"
enum-assoc = "0.3.4"