[package]
name = "owlz"
version = "0.1.2"
edition = "2021"
authors = ["justanothercell"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["owls", "emoji"]
repository = "https://github.com/justanothercell/owlz-rs"
description = """
"Owlz" ascii emojis, created randomly or by design.
"""

[dependencies]
rand = "0.8.5"
rand_derive2 = "0.1.21"
enum-assoc = "1.1.0"
